# TCF_shopping

./: CMakeLists.txt  README.md
Shopping - Copia/: CMakeLists.txt  Listaprod.cpp  Listaprod.h  Logout.cpp  Logout.h  Maglie.cpp  Menu.cpp  Menu.h  Menusel.cpp  Menusel.h  Metpagamento.h  Oggetto.cpp  Pantaloni.cpp  Paypal.cpp  Paypal.h  Registrazione.cpp  carrello.cpp  main.cpp
